# vue-flask-e2e

./: README.md
flask-app/: .gitignore  README.md  hello.py  pyproject.toml  requirement.txt
flask-app/friend_app/: __init__.py  friend.py  schema.sql
flask-sqlalchemy-app/: .gitignore  README.md  pyproject.toml  todo.md
flask-sqlalchemy-app/flask_sqlalchemy_app/: __init__.py  db.py
flask-sqlalchemy-app/flask_sqlalchemy_app/blueprints/: user.py
flask-sqlalchemy-app/flask_sqlalchemy_app/models/: user.py
flask-sqlalchemy-app/flask_sqlalchemy_app/schemas/: user.py
flask-sqlalchemy-app/migrations/versions/: 242bb797af14_initial_migration.py  851dc99420de_initial_migration.py
flask-sqlalchemy-app/tests/: test_flask_sqlalchemy_app.py
mocks/: README.md  confirmMocks.js  package-lock.json  package.json
mocks/mockRoutes/: friend.mock.js  hello.mock.js  index.js
vue-app/: README.md  package-lock.json  package.json
vue-app/cypress/integration/: App.spec.js  example.spec.js
vue-app/src/: App.vue
