[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["sheryak_n <nathanraysheryak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "flask-cors"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
